lib: Use glib-mkenums to register enums with glib

Based on a similar patch in libvirt-glib from Christophe Fergeau
<cfergeau@redhat.com>.

https://bugzilla.gnome.org/show_bug.cgi?id=696527